syntax = "proto3";

import "google/protobuf/timestamp.proto";

message Paquete{
    string id = 1;
    string tipo = 2;
    string valor = 3;
    string tienda = 4;
    string destino = 5;
    string prioritario = 6;
}

message Paquetes{
    repeated Paquete paquete = 1;
}

message Respuesta{
    string envio = 1;
}

message Estado{
    string estado = 1;
}

message EstadoCamion{
    string id = 1;
    string tipo = 2;
    int32 valor = 3;
    string origen = 4;
    string destino = 5;
    int32 intentos = 6;
    google.protobuf.Timestamp fecha = 7;
}

service EnvioPaquetes{
    rpc GetList(Paquetes) returns (Respuesta);
    rpc Seguimiento(Paquete) returns (Estado);
    rpc HistorialCamion(EstadoCamion) returns (Respuesta);
}
